--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ h1 {
 .form-container {
   display: flex;
   gap: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .form-container input {
@@ -141,12 +141,15 @@ h1 {
   color: white;
   border: none;
   border-radius: 10px;
-  margin-right: 10px;
+  margin-right: 15px;
   gap: 10px;
   margin-bottom: 20px;
   transition: background-color 0.3s ease;
 }
-
+.audio-buttons {
+  display: flex; 
+  gap: 15px; 
+}
 .audio-buttons button:hover {
   background-color: #27ae60;
 }
