--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,7 @@ h1 {
   margin-right: 15px;
   gap: 20px;
   margin-bottom: 20px;
+  margin-top: 10pm;
   transition: background-color 0.3s ease;
 }
 .audio-buttons {
